fixed image blurriness

--- a/SimpleRTSGameUI/src/Game/Game.css
+++ b/SimpleRTSGameUI/src/Game/Game.css
@@ -2,6 +2,4 @@ canvas {
   position: absolute;
   left: 0;
   top: 0;
-  height: 4096px;
-  width: 4096px;
 }
